# fusionquest

./: .gitignore  CMakeLists.txt  Readme.md  junk.cpp  scratchpad  sctacher.cpp  text
src/: banner.h  banner.txt  character.h  character_creation.cpp  functions.cpp  functions.h  globals.h  load_page.cpp  main.cpp  main_menu.cpp  page_template.h  page_two.cpp  progress_bar.h  second_page.h  stats_page.cpp  third_page.h  ui.cpp  ui.h
src/classes/: character.h  logger.h
src/core/: engine_core.cpp  engine_core.h
src/core/components/: character_component.cpp  character_component.h  equipment_component.cpp  equipment_component.h  inventory_component.cpp  inventory_component.h  quest_component.cpp  quest_component.h  stats_component.cpp  stats_component.h
src/core/systems/: GameEngineBridge.cpp  GameEngineBridge.h  progression_system.cpp  progression_system.h  quest_system.cpp  quest_system.h  save_system.cpp  save_system.h  ui_system.cpp  ui_system.h
src/ui/: character_creation.cpp  load_page.cpp  page_one.cpp  stats_page.cpp  ui.cpp  ui.h
